# onetimepass

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.cfg  setup.py  whitelist.py
.github/workflows/: ci.yml
docs/: watch-show-all.mov
onetimepass/: algorithm.py  base32.py  base_model.py  enum.py  exceptions.py  logging.py  master_key.py  otp.py  otp_algorithm.py  otp_auth_uri.py  settings.py
onetimepass/db/: __init__.py  base.py  exceptions.py  json_encrypted.py  models.py
onetimepass/otpauth/: __init__.py  errors.py  schemas.py  uri.py
tests/: test_algorithm.py  test_otp_algorithm.py
