[project]
name = "onetimepass"
version = {use_scm = true}
description = ""
authors = [
    {name = "Daniel Staśczak", email = "dstasczak@apptension.com"},
    {name = "Krystian Hanek", email = "khanek@apptension.com"},
]
dependencies = [
    "click~=8.0"]
requires-python = ">=3.10"
dynamic = ["classifiers", "version"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit~=2.16",
]

[project.scripts]
otp = "onetimepass.otp:otp"
