[project]
name = "onetimepass"
description = ""
authors = [
    {name = "Daniel Staśczak", email = "dstasczak@apptension.com"},
    {name = "Krystian Hanek", email = "khanek@apptension.com"},
]
dependencies = [
    "click~=8.0",
    "pydantic~=1.8",
    "cryptography~=36.0",
    "rich~=10.15",
]
requires-python = ">=3.10"
dynamic = ["version"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
keyring = [
    "keyring~=23.4",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
version = {use_scm = true}
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit~=2.16",
]

[project.scripts]
otp = "onetimepass.otp:otp"
